[package]
name = "r-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5", features = ["derive"] }
chrono-tz = "0.10.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
tokio-cron-scheduler = { version = "0.14.0", features = ["signal", "log"]}
tokio-macros = "2.5.0"
log = "0.4.24"
env_logger = "0.11.6"
log4rs = "1.0"
chrono = "0.4.39"
uuid = { version = "1.7.0", features = ["v4"] }
